# simple-pico-examples

./: CMakeLists.txt  README.MD  freertos-example.c  gpio-example.c  hello-world-example.c  interupt-example.c  multicore-example.c
